Comments considered